# django-graphql-boilerplate

./: .gitignore  pyproject.toml
apps/schema/: __init__.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
