[tool.poetry]
name = "creativehub"
version = "0.1.0"
description = ""
authors = ["Gitesh Kumar <razor169@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg = "^3.0.11"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
